--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SPORTAD</title>
-    <!-- bootstrap css -->
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- style css -->
+    <!-- css -->
     <link rel="stylesheet" href="css/estilos.css" />
     <!-- icono -->
     <link
@@ -38,13 +38,13 @@
                       <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="Cart.html">Carrito</a>
+                      <a class="nav-link" href="Cart.html"><img src="images/cart2.png"></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Login.html"><img src="images/user.png"></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="Categorias.html">Categorias</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="Contacto.html">Contacto</a>
                     </li>
                   </ul>
                   
@@ -90,7 +90,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Bicicleta MTB Optimus</h5>
                     <h6 class="card-text">$750.000</h6>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="Cart.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
               </div>
@@ -100,7 +100,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Bicicleta MTB Optimus</h5>
                     <h6 class="card-text">$650.000</h6>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="Cart.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
               </div>
@@ -110,7 +110,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Bicicleta MTB Optimus</h5>
                     <h6 class="card-text">$850.000</h6>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="Cart.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
               </div>
@@ -126,7 +126,7 @@
             <img src="images/about-img1.png" style="max-width: 100%" />
           </div>
           <h2 class="about_text">
-            <strong>About <span style="color: #000">Us</span></strong>
+            <strong>Sobre <span style="color: #000">Nosotros</span></strong>
           </h2>
           <div class="about_middle">
             <p class="about_lorem">
@@ -142,7 +142,7 @@
             </p>
           </div>
           <div class="red_bt">
-            <button class="read_more">Read More</button>
+            <button class="read_more">Ver mas</button>
           </div>
         </div>
       </div>
@@ -154,7 +154,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h1 class="our_text">
-              <strong>Our <span style="color: #000">Cycles</span></strong>
+              <strong>Nuestros <span style="color: #000">Productos</span></strong>
             </h1>
             <p class="about_lorem">
               t is a long established fact that a reader will be distracted by
@@ -200,7 +200,7 @@
                 class="carousel-control-prev-icon"
                 aria-hidden="true"
               ></span>
-              <span class="sr-only">Previous</span>
+              <span class="sr-only">B</span>
             </a>
             <a
               class="carousel-control-next"
@@ -212,16 +212,16 @@
                 class="carousel-control-next-icon"
                 aria-hidden="true"
               ></span>
-              <span class="sr-only">Next</span>
+              <span class="sr-only">N</span>
             </a>
           </div>
         </div>
-        <button class="seemore_bt">See More</button>
+        <button class="seemore_bt">Ver mas</button>
       </div>
     </div>
     <div class="contact_section layout_padding">
       <div class="container">
-        <h1 class="contact_text"><strong>Contact Us</strong></h1>
+        <h1 class="contact_text"><strong>Contacto</strong></h1>
       </div>
       <div class="contact_main">
         <div class="enput_section">
@@ -267,7 +267,7 @@
               </div>
               <div class="send_btn">
                 <button type="button" class="main_bt">
-                  <a href="#">Send</a>
+                  <a href="#">Enviar</a>
                 </button>
               </div>
             </div>
