--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                   <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Categorias</a>
+                  <a class="nav-link" href="#"></a>
                 </li>
                 <li class="nav-item">
                   <a href="#" id="procesar-pedido" class="btn btn-block"><img src="images/cart2.png"></a>
             
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Login.html"><img src="images/user.png"></a>
+                  <a class="nav-link" href="login.html"><img src="images/user.png"></a>
                 </li>
 
               </ul>
