--- a/Login.html
+++ b/Login.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/estiloos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <form action="">
-        <h1 class="title">Login</h1>
+        <h1 class="title">Inicio</h1>
         <label>
             <i class="fa-solid fa-user"></i>
-            <input placeholder="username" type="text" id="username">
+            <input placeholder="usuario" type="text" id="usuario">
         </label>
         <label>
             <i class="fa-solid fa-lock"></i>
-            <input placeholder="password" type="password" id="password">
+            <input placeholder="contraseña" type="password" id="contraseña">
         </label>
-        <a href="#" class="link">Forgot your password?</a>
+        <a href="#" class="link">Olvidaste tu contraseña?</a>
 
-        <button id="button">Login</button>
+        <button id="button">Inicio</button>
     </form>
     
     <script src="js/main.js"></script>
