--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SPORTAD</title>
   <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/popper.min.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
   <link rel="stylesheet" href="css/sweetalert2.min.css">
   <!-- css -->
@@ -46,7 +45,7 @@
             
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="login.html"><img src="images/user.png"></a>
+                  <a class="nav-link" href="login.html"> <i class="fa-solid fa-user"></i></a>
                 </li>
 
               </ul>
@@ -235,41 +234,6 @@
             <button class="seemore_bt">Ver mas</button>
           </div>
         </div>
-        <div class="contact_section layout_padding">
-          <div class="container">
-            <h1 class="contact_text"><strong>Contacto</strong></h1>
-          </div>
-          <div class="contact_main">
-            <div class="enput_section">
-              <div class="email_box">
-                <div class="input_main">
-                  <div class="container">
-                    <form action="/action_page.php">
-                      <div class="form-group">
-                        <input type="text" class="email-bt" placeholder="Name" name="Name" />
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="email-bt" placeholder="Email" name="Name" />
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email" />
-                      </div>
-
-                      <div class="form-group">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment"
-                          name="Massage"></textarea>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="send_btn">
-                    <button type="button" class="main_bt">
-                      <a href="#">Enviar</a>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
         <!-- our section end -->
 
